--- a/public/scss/base/_variables.scss
+++ b/public/scss/base/_variables.scss
@@ -32,6 +32,7 @@ $base-link-color: $base-accent-color;
 $hover-link-color: darken($base-accent-color, 15);
 $base-button-color: $base-link-color;
 $hover-button-color: $hover-link-color;
+$disabled-button-color: $light-gray;
 
 // Border color
 $base-border-color: $light-gray;
