Set up grid layout

--- a/public/scss/base/_variables.scss
+++ b/public/scss/base/_variables.scss
@@ -25,6 +25,7 @@ $base-background-color: white;
 
 // Font Colors
 $base-font-color: $dark-gray;
+$header-font-color: $dark-gray;
 $base-accent-color: $blue;
 
 // Link Colors
