--- a/public/scss/base/_grid-settings.scss
+++ b/public/scss/base/_grid-settings.scss
@@ -3,12 +3,15 @@
 // Neat Overrides
 // $column: 90px;
 // $gutter: 30px;
-// $grid-columns: 12;
+$grid-columns: 4;
 // $max-width: em(1088);
 
 // Neat Breakpoints
 $medium-screen: em(640);
 $large-screen: em(860);
 
-$medium-screen-up: new-breakpoint(min-width $medium-screen 4);
-$large-screen-up: new-breakpoint(min-width $large-screen 8);
+$medium-screen-up: new-breakpoint(min-width $medium-screen 8);
+$large-screen-up: new-breakpoint(min-width $large-screen 12);
+
+//$medium-screen-down: new-breakpoint(max-width $medium-screen 4);
+$medium-to-large-screen: new-breakpoint(min-width $medium-screen max-width $large-screen 8);
