--- a/public/scss/base/_typography.scss
+++ b/public/scss/base/_typography.scss
@@ -10,6 +10,7 @@ body {
 h1, h2, h3, h4, h5, h6 {
   font-family: $header-font-family;
   line-height: $header-line-height;
+  color: $header-font-color;
   margin: 0;
   text-rendering: optimizeLegibility; // Fix the character spacing for headings
 }
