--- a/public/scss/base/extends/_button.scss
+++ b/public/scss/base/extends/_button.scss
@@ -4,8 +4,9 @@
   border-radius: $base-border-radius;
   color: white;
   display: inline-block;
-  font-size: $base-font-size;
-  font-weight: bold;
+  font-size: $button-font-size;
+  font-family: $button-font-family;
+  font-weight: $button-font-weight;
   line-height: 1;
   padding: .75em 1em;
   text-decoration: none;
