--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -137,6 +137,9 @@ $fa-font-path: "../bower_components/font-awesome/fonts";
 }
 
 .footer {
+	@include span-columns(4);
+
+	text-align: center;
 	color: $medium-gray;
 }
 
