Remove button background on firefoxos

--- a/public/scss/base/_buttons.scss
+++ b/public/scss/base/_buttons.scss
@@ -2,6 +2,7 @@ button,
 input[type="submit"] {
   @extend %button;
   @include appearance(none);
+  background-image: none;
   border: none;
   cursor: pointer;
   user-select: none;
